Bug 1393150 - Prevent remote extensions when e10s is off. r=bz, r=kmag, a=lizzard

MozReview-Commit-ID: HjLLa9vx2UW

--HG--
extra : source : eae22389b267d0603db9162d878881505dd94519
extra : amend_source : 5ddd37a060099445762f9d4cf5d8880a4a8fc445