dom/webidl/WebExtensionPolicy.webidl
@@ -76,9 +76,17 @@ interface WebExtensionPolicy {
   [Affects=Everything, SetterThrows]
   attribute boolean active;
 
+  /**
+   * True if both e10s and webextensions.remote are enabled.  This must be
+   * used instead of checking the remote pref directly since remote extensions
+   * require both to be enabled.
+   */
+  static readonly attribute boolean useRemoteWebExtensions;
 
+  /**
+   * True if the calling process is an extension process.
+   */
   static readonly attribute boolean isExtensionProcess;
-
 
   /**
    * Returns true if the extension has cross-origin access to the given URI.
